--- a/search_engine/inverted_index_constructor.ipynb
+++ b/search_engine/inverted_index_constructor.ipynb
@@ -408,6 +408,14 @@
     "    # YOUR CODE HERE\n",
     "    return sorted(unsorted_pl)\n",
     "\n",
+    "def get_doc_counter(text):\n",
+    "  \"\"\"\n",
+    "  Calculates and returns a word counter for a given document\n",
+    "  \"\"\"\n",
+    "  tokens = tokenize(text)\n",
+    "  word_counter = Counter(tokens)\n",
+    "  return word_counter\n",
+    "\n",
     "def calculate_df(postings):\n",
     "    \"\"\" Takes a posting list RDD and calculate the df for each token.\n",
     "    Parameters:\n",
@@ -422,7 +430,7 @@
     "    # YOUR CODE HERE\n",
     "    return postings.map(lambda x: (x[0], len(x[1])))\n",
     "\n",
-    "def get_doc_length(text):\n",
+    "def get_doc_length(text, id):\n",
     "    \"\"\" Calculates the document's length, not including `all_stopwords`.\n",
     "    Parameters:\n",
     "    -----------\n",
@@ -432,12 +440,12 @@
     "        Document id\n",
     "    Returns:\n",
     "    --------\n",
-    "      int\n",
-    "        Document length\n",
+    "      tuple:\n",
+    "        (ID, Document length)\n",
     "    \"\"\"\n",
-    "    return len(tokenize(text))\n",
+    "    return id, len(tokenize(text))\n",
     "\n",
-    "def partition_postings_and_write(postings):\n",
+    "def partition_postings_and_write(postings, index):\n",
     "    \"\"\" A function that partitions the posting lists into buckets, writes out\n",
     "    all posting lists in a bucket to disk, and returns the posting locations for\n",
     "    each bucket. Partitioning should be done through the use of `token2bucket`\n",
@@ -457,9 +465,9 @@
     "        more details.\n",
     "    \"\"\"\n",
     "    # YOUR CODE HERE\n",
-    "    return postings.groupBy(lambda x: token2bucket_id(x[0])).map(lambda x: title_index.write_a_posting_list(x, bucket_name))\n",
+    "    return postings.groupBy(lambda x: token2bucket_id(x[0])).map(lambda x: index.write_a_posting_list(x, bucket_name))\n",
     "\n",
-    "def createIndex(index, w2df_dict, directory):\n",
+    "def createIndex(index, w2df_dict, totals_for_terms, doc_id_to_norm, DL_dict, avgDL, directory, isTitle):\n",
     "    # collect all posting lists locations into one super-set\n",
     "    super_posting_locs = defaultdict(list)\n",
     "    for blob in client.list_blobs(bucket_name, prefix=f'postings_gcp/'):\n",
@@ -474,6 +482,19 @@
     "    index.posting_locs = super_posting_locs\n",
     "    # Add the token - df dictionary to the inverted index\n",
     "    index.df = w2df_dict\n",
+    "    # Add total number of terms dict\n",
+    "    index.totals_for_terms = totals_for_terms\n",
+    "    # Add DL_body dict\n",
+    "    index.DL = DL_dict\n",
+    "    # Add Average doc length\n",
+    "    index.avgDL = avgDL\n",
+    "    # Add number of terms\n",
+    "    index.number_of_terms = len(index.totals_for_terms)\n",
+    "    # Add norm\n",
+    "    index.doc_id_to_norm = doc_id_to_norm\n",
+    "    # Save id to title\n",
+    "    if isTitle:\n",
+    "        index.id_to_title = doc_title_pairs.collectAsMap()\n",
     "    # write the global stats out\n",
     "    index.write_index('.', directory)\n",
     "    # upload to gs\n",
@@ -506,7 +527,7 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "from body_inverted_index_gcp import InvertedIndex as bodyIndex\n",
+    "from inverted_index_gcp import InvertedIndex as bodyIndex\n",
     "\n",
     "body_index = bodyIndex()\n",
     "\n",
@@ -522,10 +543,23 @@
     "\n",
     "w2df = calculate_df(postings)\n",
     "w2df_dict = w2df.collectAsMap()\n",
-    "# partition posting lists and write out\n",
-    "_ = partition_postings_and_write(postings).collect()\n",
     "\n",
-    "createIndex(body_index, w2df_dict, 'body_index')"
+    "DL_RDD = doc_text_pairs.map(lambda x: get_doc_length(x[0], x[1]))\n",
+    "\n",
+    "avgDL = DL_RDD.map(lambda x: x[1]).mean()\n",
+    "\n",
+    "DL = DL_RDD.collectAsMap()\n",
+    "\n",
+    "totals_for_terms = (word_counts.map(lambda x: (x[0], x[1][1]))).reduceByKey(lambda x, y: x + y).collectAsMap()\n",
+    "\n",
+    "N = len(DL)\n",
+    "\n",
+    "doc_id_to_norm = doc_text_pairs.map(lambda x: (x[1], get_doc_counter(x[0]))).map(lambda x: (x[0], np.linalg.norm([(x[1][term] / DL[x[0]]) * math.log(N / w2df_dict.get(term, N), 10) for term in x[1]]))).collectAsMap()\n",
+    "\n",
+    "# partition posting lists and write out\n",
+    "_ = partition_postings_and_write(postings, body_index).collect()\n",
+    "\n",
+    "createIndex(body_index, w2df_dict, totals_for_terms, doc_id_to_norm, DL, avgDL, 'body_index', False)"
    ],
    "metadata": {
     "collapsed": false,
@@ -551,7 +585,7 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "from title_inverted_index_gcp import InvertedIndex as titleIndex\n",
+    "from inverted_index_gcp import InvertedIndex as titleIndex\n",
     "\n",
     "title_index = titleIndex()\n",
     "\n",
@@ -564,10 +598,23 @@
     "\n",
     "w2df = calculate_df(postings)\n",
     "w2df_dict = w2df.collectAsMap()\n",
-    "# partition posting lists and write out\n",
-    "_ = partition_postings_and_write(postings).collect()\n",
     "\n",
-    "createIndex(title_index, w2df_dict, 'title_index')"
+    "DL_RDD = doc_title_pairs.map(lambda x: get_doc_length(x[0], x[1]))\n",
+    "\n",
+    "avgDL = DL_RDD.map(lambda x: x[1]).mean()\n",
+    "\n",
+    "DL = DL_RDD.collectAsMap()\n",
+    "\n",
+    "totals_for_terms = (word_counts.map(lambda x: (x[0], x[1][1]))).reduceByKey(lambda x, y: x + y).collectAsMap()\n",
+    "\n",
+    "N = len(DL)\n",
+    "\n",
+    "doc_id_to_norm = doc_title_pairs.map(lambda x: (x[1], get_doc_counter(x[0]))).map(lambda x: (x[0], np.linalg.norm([(x[1][term] / DL[x[0]]) * math.log(N / w2df_dict.get(term, N), 10) for term in x[1]]))).collectAsMap()\n",
+    "\n",
+    "# partition posting lists and write out\n",
+    "_ = partition_postings_and_write(postings, title_index).collect()\n",
+    "\n",
+    "createIndex(title_index, w2df_dict, totals_for_terms, doc_id_to_norm, DL, avgDL, 'title_index', True)"
    ],
    "metadata": {
     "collapsed": false,
@@ -593,12 +640,14 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "from anchor_inverted_index_gcp import InvertedIndex as anchorIndex\n",
+    "from inverted_index_gcp import InvertedIndex as anchorIndex\n",
     "\n",
     "anchor_index = anchorIndex()\n",
     "\n",
     "# take the 'anchor' and create an RDD from it\n",
     "doc_anchor = parquetFile.select(\"anchor_text\").rdd\n",
+    "doc_anchor_pairs = parquetFile.select(\"id\",\"anchor_text\").rdd.flatMap(lambda x :x[1]).groupByKey().mapValues(list).map(lambda x : (x[0],\" \".join([y for y in x[1]])))\n",
+    "\n",
     "\n",
     "# word counts map\n",
     "word_counts = doc_anchor.flatMap(lambda x: x.anchor_text).distinct().map(lambda x: word_count(x.text, x.id)).flatMap(lambda x: x).distinct()\n",
@@ -606,10 +655,23 @@
     "\n",
     "w2df = calculate_df(postings)\n",
     "w2df_dict = w2df.collectAsMap()\n",
-    "# partition posting lists and write out\n",
-    "_ = partition_postings_and_write(postings).collect()\n",
     "\n",
-    "createIndex(anchor_index, w2df_dict, 'anchor_index')"
+    "DL_RDD = doc_anchor_pairs.map(lambda x: get_doc_length(x[0], x[1]))\n",
+    "\n",
+    "avgDL = DL_RDD.map(lambda x: x[1]).mean()\n",
+    "\n",
+    "DL = DL_RDD.collectAsMap()\n",
+    "\n",
+    "totals_for_terms = (word_counts.map(lambda x: (x[0], x[1][1]))).reduceByKey(lambda x, y: x + y).collectAsMap()\n",
+    "\n",
+    "N = len(DL)\n",
+    "\n",
+    "doc_id_to_norm = doc_anchor_pairs.map(lambda x: (x[0], get_doc_counter(x[1]))).filter(lambda x: DL[x[0]] != 0).map(lambda x: (x[0], np.linalg.norm([(x[1][term] / DL[x[0]]) * math.log(N / w2df_dict.get(term, N), 10) for term in x[1]]))).collectAsMap()\n",
+    "\n",
+    "# partition posting lists and write out\n",
+    "_ = partition_postings_and_write(postings, anchor_index).collect()\n",
+    "\n",
+    "createIndex(anchor_index, w2df_dict, totals_for_terms, doc_id_to_norm, DL, avgDL, 'anchor_index', False)"
    ],
    "metadata": {
     "collapsed": false,
