--- a/search_engine/inverted_index_constructor.ipynb
+++ b/search_engine/inverted_index_constructor.ipynb
@@ -371,14 +371,14 @@
    "outputs": [],
    "source": [
     "# PLACE YOUR CODE HERE\n",
-    "def word_count(text, id):\n",
+    "def word_count(text, doc_id):\n",
     "    \"\"\" Count the frequency of each word in `text` (tf) that is not included in\n",
     "    `all_stopwords` and return entries that will go into our posting lists.\n",
     "    Parameters:\n",
     "    -----------\n",
     "      text: str\n",
     "        Text of one document\n",
-    "      id: int\n",
+    "      doc_id: int\n",
     "        Document id\n",
     "    Returns:\n",
     "    --------\n",
@@ -388,7 +388,7 @@
     "    # YOUR CODE HERE\n",
     "    word_counter = Counter()\n",
     "    word_counter.update(tokenize(text))\n",
-    "    return [(token[0], (id, token[1])) for token in word_counter.items()]\n",
+    "    return [(token[0], (doc_id, token[1])) for token in word_counter.items()]\n",
     "\n",
     "def reduce_word_counts(unsorted_pl):\n",
     "    \"\"\" Returns a sorted posting list by wiki_id.\n",
@@ -426,20 +426,20 @@
     "    # YOUR CODE HERE\n",
     "    return postings.map(lambda x: (x[0], len(x[1])))\n",
     "\n",
-    "def get_doc_length(text, id):\n",
+    "def get_doc_length(text, doc_id):\n",
     "    \"\"\" Calculates the document's length, not including `all_stopwords`.\n",
     "    Parameters:\n",
     "    -----------\n",
     "      text: str\n",
     "        Text of one document\n",
-    "      id: int\n",
+    "      doc_id: int\n",
     "        Document id\n",
     "    Returns:\n",
     "    --------\n",
     "      tuple:\n",
     "        (ID, Document length)\n",
     "    \"\"\"\n",
-    "    return id, len(tokenize(text))\n",
+    "    return doc_id, len(tokenize(text))\n",
     "\n",
     "def partition_postings_and_write(postings, index):\n",
     "    \"\"\" A function that partitions the posting lists into buckets, writes out\n",
@@ -539,18 +539,20 @@
     "postings = postings.filter(lambda x: len(x[1])>50)\n",
     "\n",
     "w2df = calculate_df(postings)\n",
+    "#word to df map\n",
     "w2df_dict = w2df.collectAsMap()\n",
     "\n",
     "DL_RDD = doc_text_pairs.map(lambda x: get_doc_length(x[0], x[1]))\n",
-    "\n",
+    "# average length of the corpus's documents\n",
     "avgDL = DL_RDD.map(lambda x: x[1]).mean()\n",
-    "\n",
+    "# documents length map\n",
     "DL = DL_RDD.collectAsMap()\n",
     "\n",
+    "# word counts map for the whole corpus\n",
     "totals_for_terms = (word_counts.map(lambda x: (x[0], x[1][1]))).reduceByKey(lambda x, y: x + y).collectAsMap()\n",
     "\n",
     "N = len(DL)\n",
-    "\n",
+    "# norm of the doc for later cosine similarity calculation\n",
     "doc_id_to_norm = doc_text_pairs.map(lambda x: (x[1], get_doc_counter(x[0]))).map(lambda x: (x[0], np.linalg.norm([(x[1][term] / DL[x[0]]) * math.log(N / w2df_dict.get(term, N), 10) for term in x[1]]))).collectAsMap()\n",
     "\n",
     "# partition posting lists and write out\n",
@@ -594,18 +596,20 @@
     "postings = word_counts.groupByKey().mapValues(reduce_word_counts)\n",
     "\n",
     "w2df = calculate_df(postings)\n",
+    "#word to df map\n",
     "w2df_dict = w2df.collectAsMap()\n",
     "\n",
     "DL_RDD = doc_title_pairs.map(lambda x: get_doc_length(x[0], x[1]))\n",
-    "\n",
+    "# average length of the corpus's documents\n",
     "avgDL = DL_RDD.map(lambda x: x[1]).mean()\n",
-    "\n",
+    "# documents length map\n",
     "DL = DL_RDD.collectAsMap()\n",
     "\n",
+    "# word counts map for the whole corpus\n",
     "totals_for_terms = (word_counts.map(lambda x: (x[0], x[1][1]))).reduceByKey(lambda x, y: x + y).collectAsMap()\n",
     "\n",
     "N = len(DL)\n",
-    "\n",
+    "# norm of the doc for later cosine similarity calculation\n",
     "doc_id_to_norm = doc_title_pairs.map(lambda x: (x[1], get_doc_counter(x[0]))).map(lambda x: (x[0], np.linalg.norm([(x[1][term] / DL[x[0]]) * math.log(N / w2df_dict.get(term, N), 10) for term in x[1]]))).collectAsMap()\n",
     "\n",
     "# partition posting lists and write out\n",
@@ -651,18 +655,20 @@
     "postings = word_counts.groupByKey().mapValues(reduce_word_counts)\n",
     "\n",
     "w2df = calculate_df(postings)\n",
+    "#word to df map\n",
     "w2df_dict = w2df.collectAsMap()\n",
     "\n",
     "DL_RDD = doc_anchor_pairs.map(lambda x: get_doc_length(x[0], x[1]))\n",
-    "\n",
+    "# average length of the corpus's documents\n",
     "avgDL = DL_RDD.map(lambda x: x[1]).mean()\n",
-    "\n",
+    "# documents length map\n",
     "DL = DL_RDD.collectAsMap()\n",
     "\n",
+    "# word counts map for the whole corpus\n",
     "totals_for_terms = (word_counts.map(lambda x: (x[0], x[1][1]))).reduceByKey(lambda x, y: x + y).collectAsMap()\n",
     "\n",
     "N = len(DL)\n",
-    "\n",
+    "# norm of the doc for later cosine similarity calculation\n",
     "doc_id_to_norm = doc_anchor_pairs.map(lambda x: (x[0], get_doc_counter(x[1]))).filter(lambda x: DL[x[0]] != 0).map(lambda x: (x[0], np.linalg.norm([(x[1][term] / DL[x[0]]) * math.log(N / w2df_dict.get(term, N), 10) for term in x[1]]))).collectAsMap()\n",
     "\n",
     "# partition posting lists and write out\n",
