--- a/search_engine/inverted_index_constructor.ipynb
+++ b/search_engine/inverted_index_constructor.ipynb
@@ -44,6 +44,8 @@
     "import itertools\n",
     "from itertools import islice, count, groupby\n",
     "import pandas as pd\n",
+    "import numpy as np\n",
+    "import math\n",
     "import os\n",
     "import re\n",
     "from operator import itemgetter\n",
@@ -53,7 +55,6 @@
     "from time import time\n",
     "from pathlib import Path\n",
     "import pickle\n",
-    "import pandas as pd\n",
     "from google.cloud import storage\n",
     "\n",
     "import hashlib\n",
@@ -463,7 +464,7 @@
     "    # YOUR CODE HERE\n",
     "    return postings.groupBy(lambda x: token2bucket_id(x[0])).map(lambda x: index.write_a_posting_list(x, bucket_name))\n",
     "\n",
-    "def createIndex(index, w2df_dict, totals_for_terms, doc_id_to_norm, DL_dict, avgDL, directory, isTitle):\n",
+    "def createIndex(index, w2df_dict, term_total, doc_id_to_norm, dl, avg_dl, directory, isTitle):\n",
     "    # collect all posting lists locations into one super-set\n",
     "    super_posting_locs = defaultdict(list)\n",
     "    for blob in client.list_blobs(bucket_name, prefix=f'postings_gcp/'):\n",
@@ -479,11 +480,11 @@
     "    # Add the token - df dictionary to the inverted index\n",
     "    index.df = w2df_dict\n",
     "    # Add total number of terms dict\n",
-    "    index.totals_for_terms = totals_for_terms\n",
+    "    index.term_total = term_total\n",
     "    # Add DL_body dict\n",
-    "    index.DL = DL_dict\n",
+    "    index.dl = dl\n",
     "    # Add Average doc length\n",
-    "    index.avgDL = avgDL\n",
+    "    index.avg_dl = avg_dl\n",
     "    # Add number of terms\n",
     "    index.number_of_terms = len(index.totals_for_terms)\n",
     "    # Add norm\n",
@@ -544,21 +545,21 @@
     "\n",
     "DL_RDD = doc_text_pairs.map(lambda x: get_doc_length(x[0], x[1]))\n",
     "# average length of the corpus's documents\n",
-    "avgDL = DL_RDD.map(lambda x: x[1]).mean()\n",
+    "avg_dl = DL_RDD.map(lambda x: x[1]).mean()\n",
     "# documents length map\n",
-    "DL = DL_RDD.collectAsMap()\n",
+    "dl = DL_RDD.collectAsMap()\n",
     "\n",
     "# word counts map for the whole corpus\n",
-    "totals_for_terms = (word_counts.map(lambda x: (x[0], x[1][1]))).reduceByKey(lambda x, y: x + y).collectAsMap()\n",
+    "term_total = (word_counts.map(lambda x: (x[0], x[1][1]))).reduceByKey(lambda x, y: x + y).collectAsMap()\n",
     "\n",
-    "N = len(DL)\n",
+    "N = len(dl)\n",
     "# norm of the doc for later cosine similarity calculation\n",
-    "doc_id_to_norm = doc_text_pairs.map(lambda x: (x[1], get_doc_counter(x[0]))).map(lambda x: (x[0], np.linalg.norm([(x[1][term] / DL[x[0]]) * math.log(N / w2df_dict.get(term, N), 10) for term in x[1]]))).collectAsMap()\n",
+    "doc_id_to_norm = doc_text_pairs.map(lambda x: (x[1], get_doc_counter(x[0]))).map(lambda x: (x[0], np.linalg.norm([(x[1][term] / dl[x[0]]) * math.log(N / w2df_dict.get(term, N), 10) for term in x[1]]))).collectAsMap()\n",
     "\n",
     "# partition posting lists and write out\n",
     "_ = partition_postings_and_write(postings, body_index).collect()\n",
     "\n",
-    "createIndex(body_index, w2df_dict, totals_for_terms, doc_id_to_norm, DL, avgDL, 'body_index', False)"
+    "createIndex(body_index, w2df_dict, term_total, doc_id_to_norm, dl, avg_dl, 'body_index', False)"
    ],
    "metadata": {
     "collapsed": false,
@@ -601,21 +602,21 @@
     "\n",
     "DL_RDD = doc_title_pairs.map(lambda x: get_doc_length(x[0], x[1]))\n",
     "# average length of the corpus's documents\n",
-    "avgDL = DL_RDD.map(lambda x: x[1]).mean()\n",
+    "avg_dl = DL_RDD.map(lambda x: x[1]).mean()\n",
     "# documents length map\n",
-    "DL = DL_RDD.collectAsMap()\n",
+    "dl = DL_RDD.collectAsMap()\n",
     "\n",
     "# word counts map for the whole corpus\n",
-    "totals_for_terms = (word_counts.map(lambda x: (x[0], x[1][1]))).reduceByKey(lambda x, y: x + y).collectAsMap()\n",
+    "term_total = (word_counts.map(lambda x: (x[0], x[1][1]))).reduceByKey(lambda x, y: x + y).collectAsMap()\n",
     "\n",
-    "N = len(DL)\n",
+    "N = len(dl)\n",
     "# norm of the doc for later cosine similarity calculation\n",
-    "doc_id_to_norm = doc_title_pairs.map(lambda x: (x[1], get_doc_counter(x[0]))).map(lambda x: (x[0], np.linalg.norm([(x[1][term] / DL[x[0]]) * math.log(N / w2df_dict.get(term, N), 10) for term in x[1]]))).collectAsMap()\n",
+    "doc_id_to_norm = doc_title_pairs.map(lambda x: (x[1], get_doc_counter(x[0]))).map(lambda x: (x[0], np.linalg.norm([(x[1][term] / dl[x[0]]) * math.log(N / w2df_dict.get(term, N), 10) for term in x[1]]))).collectAsMap()\n",
     "\n",
     "# partition posting lists and write out\n",
     "_ = partition_postings_and_write(postings, title_index).collect()\n",
     "\n",
-    "createIndex(title_index, w2df_dict, totals_for_terms, doc_id_to_norm, DL, avgDL, 'title_index', True)"
+    "createIndex(title_index, w2df_dict, term_total, doc_id_to_norm, dl, avg_dl, 'title_index', True)"
    ],
    "metadata": {
     "collapsed": false,
@@ -660,21 +661,21 @@
     "\n",
     "DL_RDD = doc_anchor_pairs.map(lambda x: get_doc_length(x[0], x[1]))\n",
     "# average length of the corpus's documents\n",
-    "avgDL = DL_RDD.map(lambda x: x[1]).mean()\n",
+    "avg_dl = DL_RDD.map(lambda x: x[1]).mean()\n",
     "# documents length map\n",
-    "DL = DL_RDD.collectAsMap()\n",
+    "dl = DL_RDD.collectAsMap()\n",
     "\n",
     "# word counts map for the whole corpus\n",
-    "totals_for_terms = (word_counts.map(lambda x: (x[0], x[1][1]))).reduceByKey(lambda x, y: x + y).collectAsMap()\n",
+    "term_total = (word_counts.map(lambda x: (x[0], x[1][1]))).reduceByKey(lambda x, y: x + y).collectAsMap()\n",
     "\n",
-    "N = len(DL)\n",
+    "N = len(dl)\n",
     "# norm of the doc for later cosine similarity calculation\n",
-    "doc_id_to_norm = doc_anchor_pairs.map(lambda x: (x[0], get_doc_counter(x[1]))).filter(lambda x: DL[x[0]] != 0).map(lambda x: (x[0], np.linalg.norm([(x[1][term] / DL[x[0]]) * math.log(N / w2df_dict.get(term, N), 10) for term in x[1]]))).collectAsMap()\n",
+    "doc_id_to_norm = doc_anchor_pairs.map(lambda x: (x[0], get_doc_counter(x[1]))).filter(lambda x: dl[x[0]] != 0).map(lambda x: (x[0], np.linalg.norm([(x[1][term] / dl[x[0]]) * math.log(N / w2df_dict.get(term, N), 10) for term in x[1]]))).collectAsMap()\n",
     "\n",
     "# partition posting lists and write out\n",
     "_ = partition_postings_and_write(postings, anchor_index).collect()\n",
     "\n",
-    "createIndex(anchor_index, w2df_dict, totals_for_terms, doc_id_to_norm, DL, avgDL, 'anchor_index', False)"
+    "createIndex(anchor_index, w2df_dict, term_total, doc_id_to_norm, dl, avg_dl, 'anchor_index', False)"
    ],
    "metadata": {
     "collapsed": false,
