--- a/search_engine/inverted_index_constructor.ipynb
+++ b/search_engine/inverted_index_constructor.ipynb
@@ -464,7 +464,7 @@
     "    # YOUR CODE HERE\n",
     "    return postings.groupBy(lambda x: token2bucket_id(x[0])).map(lambda x: index.write_a_posting_list(x, bucket_name))\n",
     "\n",
-    "def createIndex(index, w2df_dict, term_total, doc_id_to_norm, dl, avg_dl, corpus_size, directory, isTitle):\n",
+    "def createIndex(index, w2df_dict, w2idf, doc_tfidf, term_total, doc_norm, dl, avg_dl, corpus_size, directory, isTitle):\n",
     "    # collect all posting lists locations into one super-set\n",
     "    super_posting_locs = defaultdict(list)\n",
     "    for blob in client.list_blobs(bucket_name, prefix=f'postings_gcp/'):\n",
@@ -479,6 +479,10 @@
     "    index.posting_locs = super_posting_locs\n",
     "    # Add the token - df dictionary to the inverted index\n",
     "    index.df = w2df_dict\n",
+    "    # Add the token - idf dictionary to the inverted index\n",
+    "    index.w2idf = w2idf\n",
+    "    # Add the token - tfidf dictionary to the inverted index\n",
+    "    index.doc_tfidf = doc_tfidf\n",
     "    # Add total number of terms dict\n",
     "    index.term_total = term_total\n",
     "    # Add DL_body dict\n",
@@ -490,7 +494,7 @@
     "    # number of documents in the corpus\n",
     "    index.corpus_size = corpus_size\n",
     "    # Add norm\n",
-    "    index.doc_id_to_norm = doc_id_to_norm\n",
+    "    index.doc_norm = doc_norm\n",
     "    # Save id to title\n",
     "    if isTitle:\n",
     "        titles = parquetFile.select(\"id\", \"title\").rdd\n",
@@ -542,7 +546,7 @@
     "postings = postings.filter(lambda x: len(x[1])>50)\n",
     "\n",
     "w2df = calculate_df(postings)\n",
-    "#word to df map\n",
+    "# word to df map\n",
     "w2df_dict = w2df.collectAsMap()\n",
     "\n",
     "DL_RDD = doc_text_pairs.map(lambda x: get_doc_length(x[0], x[1]))\n",
@@ -551,18 +555,30 @@
     "# documents length map\n",
     "dl = DL_RDD.collectAsMap()\n",
     "\n",
+    "# normalize postings\n",
+    "postings = postings.map(lambda x: (x[0], x[1][1]))\n",
+    "\n",
     "# word counts map for the whole corpus\n",
     "term_total = (word_counts.map(lambda x: (x[0], x[1][1]))).reduceByKey(lambda x, y: x + y).collectAsMap()\n",
     "\n",
     "# number of documents in the corpus\n",
     "N = len(dl)\n",
+    "\n",
+    "# word to idf map\n",
+    "w2idf = {word: math.log(N / df + .0000001, 10) for word, df in w2df_dict.items()}\n",
+    "\n",
+    "doc_all_tf = doc_text_pairs.map(lambda x: (x[1], get_doc_counter(x[0])))\n",
+    "\n",
+    "# word to tf-idf map\n",
+    "doc_tfidf = doc_all_tf.map(lambda x: (x[0], {word: (tf / dl[x[0]]) * w2idf[word] for word, tf in x[1]})).collectAsMap()\n",
+    "\n",
     "# norm of the doc for later cosine similarity calculation\n",
-    "doc_id_to_norm = doc_text_pairs.map(lambda x: (x[1], get_doc_counter(x[0]))).map(lambda x: (x[0], np.linalg.norm([(x[1][term] / dl[x[0]]) * math.log(N / w2df_dict.get(term, N), 10) for term in x[1]]))).collectAsMap()\n",
+    "doc_norm = doc_all_tf.map(lambda x: (x[0], np.linalg.norm([(x[1][term] / dl[x[0]]) * math.log(N / w2df_dict.get(term, N), 10) for term in x[1]]))).collectAsMap()\n",
     "\n",
     "# partition posting lists and write out\n",
     "_ = partition_postings_and_write(postings, body_index).collect()\n",
     "\n",
-    "createIndex(body_index, w2df_dict, term_total, doc_id_to_norm, dl, avg_dl, N, 'body_index', False)"
+    "createIndex(body_index, w2df_dict, w2idf, doc_tfidf, term_total, doc_norm, dl, avg_dl, N, 'body_index', False)"
    ],
    "metadata": {
     "collapsed": false,
@@ -614,12 +630,12 @@
     "\n",
     "N = len(dl)\n",
     "# norm of the doc for later cosine similarity calculation\n",
-    "doc_id_to_norm = doc_title_pairs.map(lambda x: (x[1], get_doc_counter(x[0]))).map(lambda x: (x[0], np.linalg.norm([(x[1][term] / dl[x[0]]) * math.log(N / w2df_dict.get(term, N), 10) for term in x[1]]))).collectAsMap()\n",
+    "doc_norm = doc_title_pairs.map(lambda x: (x[1], get_doc_counter(x[0]))).map(lambda x: (x[0], np.linalg.norm([(x[1][term] / dl[x[0]]) * math.log(N / w2df_dict.get(term, N), 10) for term in x[1]]))).collectAsMap()\n",
     "\n",
     "# partition posting lists and write out\n",
     "_ = partition_postings_and_write(postings, title_index).collect()\n",
     "\n",
-    "createIndex(title_index, w2df_dict, term_total, doc_id_to_norm, dl, avg_dl, N, 'title_index', True)"
+    "createIndex(title_index, w2df_dict, term_total, doc_norm, dl, avg_dl, N, 'title_index', True)"
    ],
    "metadata": {
     "collapsed": false,
@@ -673,12 +689,12 @@
     "\n",
     "N = len(dl)\n",
     "# norm of the doc for later cosine similarity calculation\n",
-    "doc_id_to_norm = doc_anchor_pairs.map(lambda x: (x[0], get_doc_counter(x[1]))).filter(lambda x: dl[x[0]] != 0).map(lambda x: (x[0], np.linalg.norm([(x[1][term] / dl[x[0]]) * math.log(N / w2df_dict.get(term, N), 10) for term in x[1]]))).collectAsMap()\n",
+    "doc_norm = doc_anchor_pairs.map(lambda x: (x[0], get_doc_counter(x[1]))).filter(lambda x: dl[x[0]] != 0).map(lambda x: (x[0], np.linalg.norm([(x[1][term] / dl[x[0]]) * math.log(N / w2df_dict.get(term, N), 10) for term in x[1]]))).collectAsMap()\n",
     "\n",
     "# partition posting lists and write out\n",
     "_ = partition_postings_and_write(postings, anchor_index).collect()\n",
     "\n",
-    "createIndex(anchor_index, w2df_dict, term_total, doc_id_to_norm, dl, avg_dl, N, 'anchor_index', False)"
+    "createIndex(anchor_index, w2df_dict, term_total, doc_norm, dl, avg_dl, N, 'anchor_index', False)"
    ],
    "metadata": {
     "collapsed": false,
