--- a/search_engine/inverted_index_constructor.ipynb
+++ b/search_engine/inverted_index_constructor.ipynb
@@ -532,6 +532,62 @@
    }
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "from matplotlib import pyplot as plt\n",
+    "\n",
+    "\n",
+    "def create_zipfs_graph(word_counts):\n",
+    "  ''' Plot a log-log scale Zipf's law graph.\n",
+    "  Parameters:\n",
+    "  -----------\n",
+    "  word_counts: Counter\n",
+    "    A counter of term occurences in a corpus.\n",
+    "  Returns:\n",
+    "  --------\n",
+    "  rank: list of int\n",
+    "    Rank of words (x-axis of Zipf's law)\n",
+    "  frequency: list of int\n",
+    "    Count of word occurences (y-axis of Zipf's law)\n",
+    "  '''\n",
+    "  # Assign the appropriate values to the variables rank and frequency used by\n",
+    "  # the ploting function.\n",
+    "  # YOUR CODE HERE\n",
+    "  rank = [x for x in range(1, len(word_counts)+1)]\n",
+    "  frequency = sorted(word_counts.values(), reverse=True)\n",
+    "  plt.loglog(rank, frequency, '.')\n",
+    "\n",
+    "\n",
+    "def create_zipfs_graph_no_log(word_counts):\n",
+    "  ''' Plot a log-log scale Zipf's law graph.\n",
+    "  Parameters:\n",
+    "  -----------\n",
+    "  word_counts: Counter\n",
+    "    A counter of term occurences in a corpus.\n",
+    "  Returns:\n",
+    "  --------\n",
+    "  rank: list of int\n",
+    "    Rank of words (x-axis of Zipf's law)\n",
+    "  frequency: list of int\n",
+    "    Count of word occurences (y-axis of Zipf's law)\n",
+    "  '''\n",
+    "  # Assign the appropriate values to the variables rank and frequency used by\n",
+    "  # the ploting function.\n",
+    "  # YOUR CODE HERE\n",
+    "  rank = [x for x in range(1, len(word_counts)+1)]\n",
+    "  frequency = sorted(word_counts.values(), reverse=True)\n",
+    "  plt.plot(rank, frequency)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
    "cell_type": "markdown",
    "source": [
     "# Create the Body Indexes"
@@ -549,6 +605,8 @@
    "outputs": [],
    "source": [
     "from inverted_index_gcp import InvertedIndex as bodyIndex\n",
+    "\n",
+    "start = time()\n",
     "\n",
     "body_index = bodyIndex()\n",
     "\n",
@@ -574,9 +632,15 @@
     "\n",
     "# word counts map for the whole corpus\n",
     "term_total = (word_counts.map(lambda x: (x[0], x[1][1]))).reduceByKey(lambda x, y: x + y).collectAsMap()\n",
+    "print(f\"number of words in corpus: {len(term_total)}\")\n",
+    "print(f\"top ten words are: {term_total.items()[:10]}\")\n",
+    "print(f\"bottom ten words are: {term_total.items()[:-10]}\")\n",
+    "create_zipfs_graph_no_log(word_counts)\n",
+    "create_zipfs_graph(word_counts)\n",
     "\n",
     "# number of documents in the corpus\n",
     "N = len(dl)\n",
+    "print(f\"number of docs in corpus: {N}\")\n",
     "\n",
     "# word to idf map\n",
     "w2idf = {word: math.log(N / df + .0000001, 10) for word, df in w2df_dict.items()}\n",
@@ -592,7 +656,10 @@
     "# partition posting lists and write out\n",
     "_ = partition_postings_and_write(postings, body_index).collect()\n",
     "\n",
-    "createIndex(body_index, w2df_dict, w2idf, doc_tfidf, term_total, doc_norm, dl, avg_dl, N, 'body_index', False)"
+    "createIndex(body_index, w2df_dict, w2idf, doc_tfidf, term_total, doc_norm, dl, avg_dl, N, 'body_index', False)\n",
+    "\n",
+    "end = time()\n",
+    "print(end - start)"
    ],
    "metadata": {
     "collapsed": false,
@@ -620,6 +687,8 @@
    "source": [
     "from inverted_index_gcp import InvertedIndex as titleIndex\n",
     "\n",
+    "start = time()\n",
+    "\n",
     "title_index = titleIndex()\n",
     "\n",
     "# take the 'title' and 'id' and create an RDD from it\n",
@@ -641,8 +710,14 @@
     "\n",
     "# word counts map for the whole corpus\n",
     "term_total = (word_counts.map(lambda x: (x[0], x[1][1]))).reduceByKey(lambda x, y: x + y).collectAsMap()\n",
+    "print(f\"number of words in corpus: {len(term_total)}\")\n",
+    "print(f\"top ten words are: {term_total.items()[:10]}\")\n",
+    "print(f\"bottom ten words are: {term_total.items()[:-10]}\")\n",
+    "create_zipfs_graph_no_log(word_counts)\n",
+    "create_zipfs_graph(word_counts)\n",
     "\n",
     "N = len(dl)\n",
+    "print(f\"number of docs in corpus: {N}\")\n",
     "\n",
     "# word to idf map\n",
     "w2idf = {word: math.log(N / df + .0000001, 10) for word, df in w2df_dict.items()}\n",
@@ -658,7 +733,10 @@
     "# partition posting lists and write out\n",
     "_ = partition_postings_and_write(postings, title_index).collect()\n",
     "\n",
-    "createIndex(title_index, w2df_dict, w2idf, doc_tfidf, term_total, doc_norm, dl, avg_dl, N, 'title_index', True)"
+    "createIndex(title_index, w2df_dict, w2idf, doc_tfidf, term_total, doc_norm, dl, avg_dl, N, 'title_index', True)\n",
+    "\n",
+    "end = time()\n",
+    "print(end - start)"
    ],
    "metadata": {
     "collapsed": false,
@@ -676,6 +754,73 @@
     "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "from inverted_index_gcp import InvertedIndex as anchorIndex\n",
+    "\n",
+    "start = time()\n",
+    "\n",
+    "anchor_index = anchorIndex()\n",
+    "\n",
+    "# take the 'anchor' and create an RDD from it\n",
+    "doc_anchor = parquetFile.select(\"anchor_text\").rdd\n",
+    "doc_anchor_pairs = parquetFile.select(\"id\",\"anchor_text\").rdd.flatMap(lambda x :x[1]).groupByKey().mapValues(list).map(lambda x : (x[0],\" \".join([y for y in x[1]])))\n",
+    "\n",
+    "\n",
+    "# word counts map\n",
+    "word_counts = doc_anchor.flatMap(lambda x: x.anchor_text).distinct().map(lambda x: word_count(x.text, x.id)).flatMap(lambda x: x).distinct()\n",
+    "postings = word_counts.groupByKey().mapValues(reduce_word_counts)\n",
+    "\n",
+    "w2df = calculate_df(postings)\n",
+    "#word to df map\n",
+    "w2df_dict = w2df.collectAsMap()\n",
+    "\n",
+    "DL_RDD = doc_anchor_pairs.map(lambda x: get_doc_length(str(x[1]), x[0]))\n",
+    "# average length of the corpus's documents\n",
+    "avg_dl = DL_RDD.map(lambda x: x[1]).mean()\n",
+    "# documents length map\n",
+    "dl = DL_RDD.collectAsMap()\n",
+    "\n",
+    "# word counts map for the whole corpus\n",
+    "term_total = (word_counts.map(lambda x: (x[0], x[1][1]))).reduceByKey(lambda x, y: x + y).collectAsMap()\n",
+    "print(f\"number of words in corpus: {len(term_total)}\")\n",
+    "print(f\"top ten words are: {term_total.items()[:10]}\")\n",
+    "print(f\"bottom ten words are: {term_total.items()[:-10]}\")\n",
+    "create_zipfs_graph_no_log(word_counts)\n",
+    "create_zipfs_graph(word_counts)\n",
+    "\n",
+    "N = len(dl)\n",
+    "print(f\"number of docs in corpus: {N}\")\n",
+    "\n",
+    "# word to idf map\n",
+    "w2idf = {word: math.log(N / df + .0000001, 10) for word, df in w2df_dict.items()}\n",
+    "\n",
+    "doc_all_tf = doc_anchor_pairs.map(lambda x: (x[0], get_doc_counter(x[1])))\n",
+    "\n",
+    "# word to tf-idf map\n",
+    "doc_tfidf = doc_all_tf.map(lambda x: (x[0], {word: (tf / dl[x[0]]) * w2idf[word] for word, tf in x[1]})).collectAsMap()\n",
+    "\n",
+    "# norm of the doc for later cosine similarity calculation\n",
+    "doc_norm = doc_anchor_pairs.map(lambda x: (x[0], get_doc_counter(x[1]))).filter(lambda x: dl[x[0]] != 0).map(lambda x: (x[0], np.linalg.norm([(x[1][term] / dl[x[0]]) * math.log(N / w2df_dict.get(term, N), 10) for term in x[1]]))).collectAsMap()\n",
+    "\n",
+    "# partition posting lists and write out\n",
+    "_ = partition_postings_and_write(postings, anchor_index).collect()\n",
+    "\n",
+    "createIndex(anchor_index, w2df_dict, w2idf, doc_tfidf, term_total, doc_norm, dl, avg_dl, N, 'anchor_index', False)\n",
+    "\n",
+    "end = time()\n",
+    "print(end - start)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
     }
    }
   },
