--- a/search_engine/inverted_index_constructor.ipynb
+++ b/search_engine/inverted_index_constructor.ipynb
@@ -19,12 +19,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "outputs": [],
    "source": [
-    "!pip install -q google-cloud-storage == 1.43.0\n",
-    "!pip install -q graphframes\n",
-    "!pip install -q gensim"
+    "# !pip install -q google-cloud-storage == 1.43.0\n",
+    "# !pip install -q graphframes\n",
+    "!pip install -q gensim\n",
+    "import gensim.downloader"
    ],
    "metadata": {
     "collapsed": false,
@@ -467,7 +468,7 @@
     "    # YOUR CODE HERE\n",
     "    return postings.groupBy(lambda x: token2bucket_id(x[0])).map(lambda x: index.write_a_posting_list(x, bucket_name))\n",
     "\n",
-    "def createIndex(index, w2df_dict, w2idf, doc_tfidf, term_total, doc_norm, dl, avg_dl, corpus_size, directory, isTitle):\n",
+    "def createIndex(index, w2df_dict, w2idf, doc_tfidf, term_total, term_similar_score, doc_norm, dl, avg_dl, corpus_size, directory, isTitle):\n",
     "    # collect all posting lists locations into one super-set\n",
     "    super_posting_locs = defaultdict(list)\n",
     "    for blob in client.list_blobs(bucket_name, prefix=f'postings_gcp/'):\n",
@@ -488,6 +489,8 @@
     "    index.doc_tfidf = doc_tfidf\n",
     "    # Add total number of terms dict\n",
     "    index.term_total = term_total\n",
+    "    # add similar words for each word\n",
+    "    index.term_similar_score = term_similar_score\n",
     "    # Add DL_body dict\n",
     "    index.dl = dl\n",
     "    # Add Average doc length\n",
@@ -519,10 +522,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 11,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[==================================================] 100.0% 66.0/66.0MB downloaded\n"
+     ]
+    }
+   ],
    "source": [
-    "word2vec = gensim.downloader.load('fasttext-wiki-news-subwords-300')"
+    "word2vec_glove = gensim.downloader.load('glove-wiki-gigaword-50')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('bananas', 0.8152028322219849), ('coconut', 0.7872511148452759), ('pineapple', 0.7579814791679382), ('mango', 0.7556402087211609), ('beet', 0.7212650179862976)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def get_similar_words(term):\n",
+    "    return word2vec_glove.most_similar(term, topn=5)\n",
+    "\n",
+    "print(get_similar_words(\"banana\"))"
    ],
    "metadata": {
     "collapsed": false,
@@ -575,6 +611,9 @@
     "# word counts map for the whole corpus\n",
     "term_total = (word_counts.map(lambda x: (x[0], x[1][1]))).reduceByKey(lambda x, y: x + y).collectAsMap()\n",
     "\n",
+    "# word to the 5 most similar words and their score\n",
+    "term_similar_score = {term: get_similar_words(term) for term in term_total.keys()}\n",
+    "\n",
     "# number of documents in the corpus\n",
     "N = len(dl)\n",
     "\n",
@@ -592,7 +631,7 @@
     "# partition posting lists and write out\n",
     "_ = partition_postings_and_write(postings, body_index).collect()\n",
     "\n",
-    "createIndex(body_index, w2df_dict, w2idf, doc_tfidf, term_total, doc_norm, dl, avg_dl, N, 'body_index', False)"
+    "createIndex(body_index, w2df_dict, w2idf, doc_tfidf, term_total, term_similar_score, doc_norm, dl, avg_dl, N, 'body_index', False)"
    ],
    "metadata": {
     "collapsed": false,
@@ -642,6 +681,9 @@
     "# word counts map for the whole corpus\n",
     "term_total = (word_counts.map(lambda x: (x[0], x[1][1]))).reduceByKey(lambda x, y: x + y).collectAsMap()\n",
     "\n",
+    "# word to the 5 most similar words and their score\n",
+    "term_similar_score = {term: get_similar_words(term) for term in term_total.keys()}\n",
+    "\n",
     "N = len(dl)\n",
     "\n",
     "# word to idf map\n",
@@ -658,7 +700,7 @@
     "# partition posting lists and write out\n",
     "_ = partition_postings_and_write(postings, title_index).collect()\n",
     "\n",
-    "createIndex(title_index, w2df_dict, w2idf, doc_tfidf, term_total, doc_norm, dl, avg_dl, N, 'title_index', True)"
+    "createIndex(title_index, w2df_dict, w2idf, doc_tfidf, term_total, term_similar_score, doc_norm, dl, avg_dl, N, 'title_index', True)"
    ],
    "metadata": {
     "collapsed": false,
@@ -710,6 +752,9 @@
     "# word counts map for the whole corpus\n",
     "term_total = (word_counts.map(lambda x: (x[0], x[1][1]))).reduceByKey(lambda x, y: x + y).collectAsMap()\n",
     "\n",
+    "# word to the 5 most similar words and their score\n",
+    "term_similar_score = {term: get_similar_words(term) for term in term_total.keys()}\n",
+    "\n",
     "N = len(dl)\n",
     "\n",
     "# word to idf map\n",
@@ -726,7 +771,7 @@
     "# partition posting lists and write out\n",
     "_ = partition_postings_and_write(postings, anchor_index).collect()\n",
     "\n",
-    "createIndex(anchor_index, w2df_dict, w2idf, doc_tfidf, term_total, doc_norm, dl, avg_dl, N, 'anchor_index', False)"
+    "createIndex(anchor_index, w2df_dict, w2idf, doc_tfidf, term_total, term_similar_score, doc_norm, dl, avg_dl, N, 'anchor_index', False)"
    ],
    "metadata": {
     "collapsed": false,
